--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -35,16 +35,18 @@
 
 .recommend {
   padding: 20rpx;
-  height: 350rpx;
+  height: 250rpx;
 }
 
 .recommendScroll {
   display: flex;
+  height: 200rpx;
 }
 
 .scrollItem {
   font-size: 25rpx;
   margin-right: 20rpx;
+  /* height: 200rpx; */
 }
 
 .scrollItem image {
