第二次提交

--- a/pages/video/video.wxml
+++ b/pages/video/video.wxml
@@ -1,2 +1,46 @@
 <!--pages/video/video.wxml-->
-<text>pages/video/video.wxml</text>
+<view class="container">
+<!-- 头部 -->
+  <view class="header">
+    <view class="search">
+      <image src="../../static/images/video/video.jpg" class="image1"></image>
+      <text class="search-text">海阔天空</text>
+      <image src="../../static/images/logo.png" class="image2"></image>
+    </view>
+    <!-- 头部滚动条 -->
+    <scroll-view class="songs" enable-flex scroll-x scroll-into-view="{{'scroll' + navId}}" scroll-with-animation>
+      <view class="setWH " wx:for="{{videGroupList}}" wx:key="id" id="{{'scroll' + item.id}}">
+      <view class="songs-item {{navId === item.id  ? 'active':''}}" bindtap="changeNav" id="{{item.id}}">
+      {{item.name}}
+      </view>
+      </view>
+    </scroll-view>
+    <!-- 视频区 -->
+    <scroll-view scroll-y>
+    <view class="video" wx:for="{{videoListData}}" wx:key= 'id'>
+    <video src="{{item.data.urlInfo.url}}"></video>
+
+    <view class="content">{{item.data.title}}</view>
+
+      <view class="footer">
+        <image class="avatar" src="{{item.data.creator.avatarUrl}}"></image>
+        <text class="nickName">{{item.data.creator.nickname}}</text>
+        <view class="comments_praised">
+          <!-- <text class="item">
+            <text class="iconfont icon-buoumaotubiao15"></text>
+            <text class="count">{{item.data.praisedCount}}</text>
+          </text>
+          <text class="item">
+            <text class="iconfont icon-pinglun1"></text>
+            <text class="count">{{item.data.commentCount}}</text>
+          </text>
+          <button open-type="share" class="item btn">
+            <text class="iconfont icon-gengduo"></text>
+          </button> -->
+        </view>
+      </view>
+    </view>
+    </scroll-view>
+  </view>
+
+</view>
